# kure-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tray-popup.html  tsconfig.json  tsconfig.node.json  vite.config.mts
.cursor/rules/: scroll-area.mdc
.github/workflows/: ci.yml  release-dmg.yml
docs/: stash-vault-for-llms.md
mobile/: README.md  app.json  metro.config.js  package-lock.json  package.json
mobile/patches/: @react-native-ai+apple+0.12.0.patch
mobile/src/: aiEnrichment.ts  historyStorage.ts  mobileAppContext.tsx  mobileStyles.ts  settingsStorage.ts  theme.ts  vaultStorage.ts  writeVaultBookmark.ts
mobile/src/app/: +native-intent.ts  _layout.tsx  index.tsx  (+2 more)
node-bridge/: bridge.ts  database.ts  ipc-handlers.ts  types.ts
node-bridge/lib/: user-data-path.ts
node-bridge/migrations/: 001-initial-schema.sql
node-bridge/services/: ai.ts  bookmark-media-download.ts  color-palette.ts  hybrid-search.ts  image-store.ts  metadata-scraper.ts  settings.ts
node-bridge/vault/: file-watcher.ts  migrate-from-sqlite.ts  search.ts  types.ts  vault-manager.ts  vault-picker.ts
src/: App.tsx  desktop.ts  main.tsx  tray-popup.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chrome.rs  lib.rs  main.rs
src/hooks/: useItems.ts  useSelection.ts  useTags.ts
src/lib/: assets.ts  bookmarkMedia.ts  colorMatch.ts  constants.ts  gridColorPalette.ts  lightboxMotion.ts  shader-config.ts
src/styles/: fonts.css  globals.css
src/utils/: videoDebug.ts  videoFrame.ts
(+25 files in other folders)
